--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,5 +6,6 @@
   <label for="input_email"></label><input type="email" id="input_email" placeholder="email" />
   <label for="input_password"></label><input type="password" id="input_password" placeholder="Password" />
 </form>
+<button id="github">Login con Github</button>
 
 <script src="js/login.js"></script>
